# BitcoinOS

./: .gitignore  Cargo.toml  README.md  dfx.json  justfile  smartwallet.wasm
agents/os/: Cargo.toml  os.did
agents/os/src/: error.rs  lib.rs
agents/os/src/api/: append_wallet_action.rs  count_wallet.rs  create_wallet.rs  create_wallet_canister.rs  create_wallet_owner.rs  mod.rs
agents/os/src/domain/: mod.rs
agents/os/src/repoistories/: appen_wallet_action.rs  insert_wallet_owner.rs  mod.rs  wallet_action_stable.rs  wallet_owner_stable.rs
agents/os/src/services/: count_wallet.rs  insert_wallet_owner.rs  mod.rs
agents/smartwallet/: Cargo.toml
agents/smartwallet/src/: lib.rs
agents/smartwallet/src/api/: mod.rs
agents/smartwallet/src/bitcoin/: mod.rs
agents/smartwallet/src/bitcoin/api/: mod.rs
agents/smartwallet/src/bitcoin/domain/: create_wallet.rs  entities.rs  mod.rs  wallet.rs
agents/smartwallet/src/bitcoin/entities/: mod.rs  wallet.rs
agents/smartwallet/src/domain/: create_wallet.rs  entities.rs  mod.rs
agents/smartwallet/src/rgb/entities/: wallet.rs
agents/wallet/: Cargo.toml
agents/wallet/src/: lib.rs
src/bitcoinOS_backend/: Cargo.toml
