[workspace]
members = [
    "agents/*"
]

resolver = "2"

[workspace.dependencies]
# for RGB
amplify = "4.6.0"
strict_encoding = "2.7.0-beta.1"
strict_types = "2.7.0-beta.1"
aluvm = "0.11.0-beta.4"
bp-core = "0.11.0-beta.4"
rgb-std = { version = "0.11.0-beta.4", features = ["serde"] }
# rgb-schemata = "0.11.0-beta.4"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"



[patch.crates-io]
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "master" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "master" }