[workspace]
members = [
    "agents/*"
]

resolver = "2"

[workspace.dependencies]
# for ICP
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
ic-ledger-types = "0.10"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6"
ciborium = "0.2"

# for Bitcoin
bdk = "0.29"
getrandom = "0.2"

# for RGB
amplify = "4.6.0"
strict_encoding = "2.7.0-beta.1"
strict_types = "2.7.0-beta.1"
aluvm = "0.11.0-beta.4"
bp-core = "0.11.0-beta.4"
rgb-std = { version = "0.11.0-beta.4", features = ["serde"] }
# rgb-schemata = "0.11.0-beta.4"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1"
zeroize = "1.7"
zeroize_derive = "1.4"

[patch.crates-io]
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "master" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "master" }