[package]
name = "smartwallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true } # Feel free to remove this dependency if you don't need timers
ic-stable-structures = { workspace = true }

maybe-async ={ workspace = true }
miniscript = { workspace = true }
bitcoin = { workspace = true }
bdk = { workspace = true }
core2 = { workspace = true }
rgb-std = { workspace = true }
amplify = { workspace = true }
getrandom = { workspace = true }
strict_encoding = { workspace = true }
strict_types = { workspace = true }
aluvm = { workspace = true }
bp-core = { workspace = true }
# rgb-std = { version = "0.11.0-beta.4", features = ["serde"] }
# rgb-schemata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
zeroize_derive = { workspace = true }


ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.3.17" }
